@@ -1,3 +1,13 @@
+  Colin Watson  <cjwatson@debian.org>
+
+	Add (untested) zh_HK support. Thanks to Alex Lau for advice.
+
+	* src/encodings.c (directory_table): Add zh_HK, defaulting to the
+	  BIG5-HKSCS encoding.
+	  (charset_table): Add BIG5-HKSCS, defaulting to the nippon driver.
+	  (compatible_encodings): Recognise BIG5-HKSCS encoding.
+	  (get_roff_encoding): Add special case for zh_HK.UTF-8 locale.
+
 Wed Apr 11 04:37:35 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	Add MANPAGER support. Thanks to Faidon Liambotis for the suggestion.
